--- a/styles/style.css
+++ b/styles/style.css
@@ -684,8 +684,9 @@ body{
     width: 100%;
     height: 0px;
     top: 0;
-    background-color: rgba(255, 255, 255, 0.7);
-    backdrop-filter: blur(20px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.72);
+    backdrop-filter: saturate(180%) blur(20px) ;
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
     transition: .5s cubic-bezier(0.52, 0.16, 0.24, 1) .5s;
     border-bottom: 0px solid #00000000;
 }
